/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.2/userguide/building_java_projects.html
 */

plugins {
    id 'java'
    id 'maven-publish'
}

group = "team.qtk"
version = "1.14.5"

java {
    sourceCompatibility = 17
    targetCompatibility = 17
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation "com.fasterxml.jackson.core:jackson-databind:2.13.1"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.7"
    implementation "com.github.qw623577789:qtk-stream:1.0.1"
    implementation 'org.projectlombok:lombok:1.18.30'
    
    // 普通编译时ADT
    annotationProcessor 'org.projectlombok:lombok:1.18.30'


    // 测试时ADT
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

java {
    withSourcesJar()
}

// 每次编译时拉起最新的包(更新快照包)
configurations.all {  
	// check for updates every build   
	resolutionStrategy.cacheChangingModulesFor  0,'seconds'  
}

publishing {
    publications{
        mavenJava(MavenPublication){
            from components.java
        }
    }
}